[tool.poetry]
name = "dpc-analysis"
version = "0.1.0"
description = ""
authors = ["akira1744 <akr1744@gmail.com>"]
readme = "README.md"
packages = [{include = "dpc_analysis"}]

[tool.poetry.dependencies]
python = "3.9.18"
streamlit = "1.3.1"
pandas = "1.3.5"
altair = "4.2.0"
toolz = "0.11.1"
numpy = "1.20.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "6.29.3"
black = "21.12b0"
ruff = "0.1.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
